--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -97,11 +98,18 @@
                                 <segue destination="rjB-tL-ZcN" kind="presentation" identifier="segueToAdd" id="S1D-1q-c4E"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Edit" id="l3p-9H-Xu1">
-                            <connections>
-                                <action selector="editTableAction:" destination="BYZ-38-t0r" id="BiF-ay-1vV"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Edit" id="l3p-9H-Xu1">
+                                <connections>
+                                    <action selector="editTableAction:" destination="BYZ-38-t0r" id="BiF-ay-1vV"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="refresh" id="2BW-vG-nHz">
+                                <connections>
+                                    <action selector="refreshAction:" destination="BYZ-38-t0r" id="leR-Lz-vgd"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="editButton" destination="l3p-9H-Xu1" id="i80-dx-pTA"/>
@@ -139,7 +147,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collCellid" id="ljc-Iy-9h6" customClass="CollectionViewCell" customModule="Weather" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2.5" width="80" height="80"/>
+                                        <rect key="frame" x="0.0" y="3" width="80" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
@@ -242,17 +250,29 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rZ-Jn-GIc">
+                                <rect key="frame" x="15" y="400" width="290" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="H6k-m9-G2Z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="10"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.094117647060000004" green="0.13725490200000001" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Mrj-ZT-HMW" firstAttribute="top" secondItem="D7K-qn-xUH" secondAttribute="bottom" constant="-2" id="327-fo-kid"/>
                             <constraint firstItem="0wQ-JB-Vnf" firstAttribute="top" secondItem="Gpa-dV-3Dl" secondAttribute="bottom" constant="30" id="Fbd-DR-fpm"/>
                             <constraint firstAttribute="trailing" secondItem="D7K-qn-xUH" secondAttribute="trailing" id="NWo-Rz-Jlj"/>
+                            <constraint firstItem="D7K-qn-xUH" firstAttribute="top" secondItem="2rZ-Jn-GIc" secondAttribute="bottom" id="Nsq-K4-UD4"/>
                             <constraint firstAttribute="trailing" secondItem="MhB-Tl-JJR" secondAttribute="trailing" constant="10" id="Oc7-mH-Zab"/>
                             <constraint firstItem="Gpa-dV-3Dl" firstAttribute="top" secondItem="pwK-Fk-uKs" secondAttribute="bottom" constant="10" id="QRP-pW-8Dc"/>
                             <constraint firstItem="MhB-Tl-JJR" firstAttribute="leading" secondItem="6q7-5I-vqX" secondAttribute="trailing" constant="-15" id="QtV-tA-Q8L"/>
+                            <constraint firstItem="2rZ-Jn-GIc" firstAttribute="leading" secondItem="PLG-eY-U2b" secondAttribute="leading" constant="15" id="RvR-cC-fFC"/>
                             <constraint firstItem="Gpa-dV-3Dl" firstAttribute="leading" secondItem="PLG-eY-U2b" secondAttribute="leading" constant="10" id="WTm-8k-Ubp"/>
                             <constraint firstItem="MhB-Tl-JJR" firstAttribute="top" secondItem="Gpa-dV-3Dl" secondAttribute="bottom" constant="30" id="csH-7p-8iH"/>
+                            <constraint firstAttribute="trailing" secondItem="2rZ-Jn-GIc" secondAttribute="trailing" constant="15" id="gtN-cs-lJq"/>
                             <constraint firstItem="D7K-qn-xUH" firstAttribute="leading" secondItem="PLG-eY-U2b" secondAttribute="leading" id="hDR-UB-O7M"/>
                             <constraint firstItem="6q7-5I-vqX" firstAttribute="leading" secondItem="PLG-eY-U2b" secondAttribute="leading" constant="15" id="pbs-5p-IaZ"/>
                             <constraint firstAttribute="trailing" secondItem="Gpa-dV-3Dl" secondAttribute="trailing" constant="10" id="pgR-r5-1Iq"/>
@@ -263,7 +283,7 @@
                     <navigationItem key="navigationItem" id="jgQ-zi-i3H">
                         <nil key="title"/>
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="jeg-pl-tPE">
-                            <rect key="frame" x="72.5" y="7" width="175" height="30"/>
+                            <rect key="frame" x="73" y="7" width="175" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
                                 <segment title="3 days"/>
@@ -273,6 +293,11 @@
                                 <action selector="changeDayCount:" destination="X0w-8q-NR7" eventType="valueChanged" id="4dX-nJ-aP6"/>
                             </connections>
                         </segmentedControl>
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="JYe-a2-4j0">
+                            <connections>
+                                <action selector="refreshAction:" destination="X0w-8q-NR7" id="tQm-mp-9mY"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="dayWeekTitle" destination="0wQ-JB-Vnf" id="Rzc-qy-evC"/>
@@ -281,6 +306,7 @@
                         <outlet property="segment" destination="jeg-pl-tPE" id="CKh-ig-6dp"/>
                         <outlet property="tableDayCollection" destination="D7K-qn-xUH" id="lry-Tn-0eQ"/>
                         <outlet property="tempDataText" destination="6q7-5I-vqX" id="dS1-6W-QG7"/>
+                        <outlet property="updateDate" destination="2rZ-Jn-GIc" id="luZ-HP-HkQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1KM-RJ-FFf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -340,7 +366,6 @@
                                 <rect key="frame" x="0.0" y="20" width="252" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="1" green="0.50196078430000002" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="barTintColor" red="0.27058823529999998" green="0.2666666667" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="rjB-tL-ZcN" id="SB0-Yv-5fp"/>
